# AI

chat/: main.py  pyproject.toml
chat/ai/deepseek/: r1.py
chat/ai/exaone/: exaone3_5.py
graph/: basic.py
graph/base/: __init__.py  graph.py  state.py
v1/: .gitignore  README.md  ai.py  main.py  pyproject.toml  vector.py  빽다방.txt
v2/: .env  README.md  ai.py  config.py  db.py  docker-compose.yaml  main.py  model.py  pyproject.toml
v2/migrations/: env.py
v2/migrations/versions/: 3d0d1afd74fb_paikdabangmenudocument_migration.py  468d3b1c0505_tax_migration.py  4c15bc2f0b3d_item_migration.py
v3/: pyproject.toml
v3/1. 맛보기/: main.py
v3/2. 문서파싱/: .gitignore  main.py
v3/3. 다시시도/: main.py
v3/4. self_rag/: .gitignore  main.py
v3/5. corrective_rag/: main.py
v3/6. subgraph/: income_tax_graph.py  main.py
v3/7. parallel_agent/: main.py
v3/8. multi_agent/: .gitignore  estate_tax.txt  income_tax_graph.py  main.py
v3/9. history/: estate_tax_graph.py  main.py
