[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-ollama>=0.2.3",
    "langchain-text-splitters>=0.3.6",
    "scikit-learn>=1.6.1",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
]
