[project]
name = "v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.74",
    "pypdf>=5.3.0",
]
